# data_agent

./: README.md
backend/: langgraph.json  pyproject.toml  requirements.txt
backend/src/: .env  agent.py  data_manager.py  server.py  tools.py
backend/temp_data/: customer_info.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  DataUpload.tsx  Header.tsx  VisualizationPanel.tsx
frontend/src/config/: api.ts
frontend/src/data/: mockData.ts
frontend/src/styles/: globals.css
